--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-engine",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "a node rule engine with time task",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,8 @@
     "jsonre": "^0.0.7",
     "node-schedule": "^1.3.2",
     "lodash": "^4.17.11",
-    "is": "^3.3.0"
+    "is": "^3.3.0",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "ioredis": "^4.9.3"
