--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-engine",
-  "version": "0.1.3",
+  "version": "0.1.6",
   "description": "a node rule engine with time task",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
     "node-schedule": "^1.3.2",
     "lodash": "^4.17.11",
     "is": "^3.3.0",
+    "promise-queue-plus": "^1.2.2",
     "moment": "^2.24.0"
   },
   "devDependencies": {
